// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements/CheckboxInput Default smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for="checkbox-input"
           class="text-sm font-medium text-gray-700 dark:text-gray-300"
    >
      Checkbox Label
    </label>
    <label for="checkbox-input"
           class="inline-flex items-center cursor-pointer transition-all duration-200 hover:opacity-80"
    >
      <input id="checkbox-input"
             type="checkbox"
             class="form-checkbox transition-all duration-200 peer hover:scale-105 focus:ring-2 focus:ring-offset-2"
             value="terms"
      >
      <span class="ml-2 ltr:ml-2 rtl:mr-2 transition-colors duration-200 text-gray-700 dark:text-gray-300">
        Accept terms and conditions
      </span>
    </label>
  </div>
</div>
`;

exports[`Elements/CheckboxInput Disabled smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for="checkbox-input"
           class="text-sm font-medium text-gray-700 dark:text-gray-300"
    >
      Disabled Checkbox
    </label>
    <label for="checkbox-input"
           class="inline-flex items-center cursor-pointer transition-all duration-200 hover:opacity-80 opacity-50 cursor-not-allowed"
    >
      <input id="checkbox-input"
             type="checkbox"
             disabled
             class="form-checkbox transition-all duration-200 cursor-not-allowed opacity-50 peer"
             value="disabled-option"
      >
      <span class="ml-2 ltr:ml-2 rtl:mr-2 transition-colors duration-200 text-gray-700 dark:text-gray-300">
        This option is currently unavailable
      </span>
    </label>
  </div>
</div>
`;

exports[`Elements/CheckboxInput MultipleCheckboxes smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="space-y-4">
    <h3 class="text-lg font-medium text-gray-900 dark:text-gray-100">
      Communication Preferences
    </h3>
    <div class="space-y-3">
      <div class="flex flex-col gap-1">
        <label for
               class="text-sm font-medium text-gray-700 dark:text-gray-300"
        >
          Email Notifications
        </label>
        <label for
               class="inline-flex items-center cursor-pointer transition-all duration-200 hover:opacity-80"
        >
          <input id
                 type="checkbox"
                 class="form-checkbox transition-all duration-200 peer hover:scale-105 focus:ring-2 focus:ring-offset-2"
                 value="notifications"
          >
          <span class="ml-2 ltr:ml-2 rtl:mr-2 transition-colors duration-200 text-gray-700 dark:text-gray-300">
            Receive email notifications
          </span>
        </label>
      </div>
      <div class="flex flex-col gap-1">
        <label for
               class="text-sm font-medium text-gray-700 dark:text-gray-300"
        >
          Newsletter
        </label>
        <label for
               class="inline-flex items-center cursor-pointer transition-all duration-200 hover:opacity-80"
        >
          <input id
                 type="checkbox"
                 class="form-checkbox transition-all duration-200 peer hover:scale-105 focus:ring-2 focus:ring-offset-2"
                 value="newsletter"
          >
          <span class="ml-2 ltr:ml-2 rtl:mr-2 transition-colors duration-200 text-gray-700 dark:text-gray-300">
            Subscribe to our newsletter
          </span>
        </label>
      </div>
      <div class="flex flex-col gap-1">
        <label for
               class="text-sm font-medium text-gray-700 dark:text-gray-300"
        >
          Marketing
        </label>
        <label for
               class="inline-flex items-center cursor-pointer transition-all duration-200 hover:opacity-80"
        >
          <input id
                 type="checkbox"
                 class="form-checkbox transition-all duration-200 peer hover:scale-105 focus:ring-2 focus:ring-offset-2"
                 value="marketing"
          >
          <span class="ml-2 ltr:ml-2 rtl:mr-2 transition-colors duration-200 text-gray-700 dark:text-gray-300">
            Receive marketing communications
          </span>
        </label>
      </div>
      <div class="flex flex-col gap-1">
        <label for
               class="text-sm font-medium text-gray-700 dark:text-gray-300"
        >
          Updates
        </label>
        <label for
               class="inline-flex items-center cursor-pointer transition-all duration-200 hover:opacity-80"
        >
          <input id
                 type="checkbox"
                 class="form-checkbox transition-all duration-200 peer hover:scale-105 focus:ring-2 focus:ring-offset-2"
                 value="updates"
          >
          <span class="ml-2 ltr:ml-2 rtl:mr-2 transition-colors duration-200 text-gray-700 dark:text-gray-300">
            Get product updates
          </span>
        </label>
      </div>
    </div>
    <div class="mt-4 p-3 bg-gray-100 dark:bg-gray-800 rounded">
      <p class="text-sm text-gray-600 dark:text-gray-400">
        Selected: None
      </p>
    </div>
  </div>
</div>
`;

exports[`Elements/CheckboxInput OutlineRoundedVariant smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for="checkbox-input"
           class="text-sm font-medium text-gray-700 dark:text-gray-300"
    >
      Outline Rounded Variant
    </label>
    <label for="checkbox-input"
           class="inline-flex items-center cursor-pointer transition-all duration-200 hover:opacity-80"
    >
      <input id="checkbox-input"
             type="checkbox"
             class="form-checkbox transition-all duration-200 outline-primary rounded-full hover:scale-105 focus:ring-2 focus:ring-offset-2"
             value="dark-mode"
      >
      <span class="ml-2 ltr:ml-2 rtl:mr-2 transition-colors duration-200 text-gray-700 dark:text-gray-300">
        Enable dark mode
      </span>
    </label>
  </div>
</div>
`;

exports[`Elements/CheckboxInput Required smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for="checkbox-input"
           class="text-sm font-medium text-gray-700 dark:text-gray-300"
    >
      Required Checkbox
      <span class="text-red-500">
        *
      </span>
    </label>
    <label for="checkbox-input"
           class="inline-flex items-center cursor-pointer transition-all duration-200 hover:opacity-80"
    >
      <input id="checkbox-input"
             type="checkbox"
             required
             class="form-checkbox transition-all duration-200 peer hover:scale-105 focus:ring-2 focus:ring-offset-2"
             value="age-confirmation"
      >
      <span class="ml-2 ltr:ml-2 rtl:mr-2 transition-colors duration-200 text-gray-700 dark:text-gray-300">
        I confirm that I am over 18 years old
      </span>
    </label>
  </div>
</div>
`;

exports[`Elements/CheckboxInput SuccessColor smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for="checkbox-input"
           class="text-sm font-medium text-gray-700 dark:text-gray-300"
    >
      Success Variant
    </label>
    <label for="checkbox-input"
           class="inline-flex items-center cursor-pointer transition-all duration-200 hover:opacity-80"
    >
      <input id="checkbox-input"
             type="checkbox"
             checked
             class="form-checkbox transition-all duration-200 text-success peer hover:scale-105 focus:ring-2 focus:ring-offset-2"
             value="completed"
      >
      <span class="ml-2 ltr:ml-2 rtl:mr-2 transition-colors duration-200 text-gray-700 dark:text-gray-300">
        Task completed successfully
      </span>
    </label>
  </div>
</div>
`;

exports[`Elements/CheckboxInput WithError smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for="checkbox-input"
           class="text-sm font-medium text-gray-700 dark:text-gray-300"
    >
      Checkbox with Error
    </label>
    <label for="checkbox-input"
           class="inline-flex items-center cursor-pointer transition-all duration-200 hover:opacity-80"
    >
      <input id="checkbox-input"
             type="checkbox"
             class="form-checkbox transition-all duration-200 border-red-500 peer hover:scale-105 focus:ring-2 focus:ring-offset-2"
             value="terms"
      >
      <span class="ml-2 ltr:ml-2 rtl:mr-2 transition-colors duration-200 text-red-500 text-gray-700 dark:text-gray-300">
        Accept terms and conditions
      </span>
    </label>
    <span class="text-sm text-red-500 mt-1">
      You must accept the terms to continue
    </span>
  </div>
</div>
`;

exports[`Elements/CheckboxInput WithLabel smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for="terms-checkbox"
           class="text-sm font-medium text-gray-700 dark:text-gray-300"
    >
      Terms and Conditions
    </label>
    <label for="terms-checkbox"
           class="inline-flex items-center cursor-pointer transition-all duration-200 hover:opacity-80"
    >
      <input id="terms-checkbox"
             type="checkbox"
             class="form-checkbox transition-all duration-200 peer hover:scale-105 focus:ring-2 focus:ring-offset-2"
             value="terms"
      >
      <span class="ml-2 ltr:ml-2 rtl:mr-2 transition-colors duration-200 text-gray-700 dark:text-gray-300">
        I agree to the terms and conditions
      </span>
    </label>
  </div>
</div>
`;
